<resources>
    <string name="app_name">My Recipes</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="steps">Steps</string>
    <string name="ingredients">Ingredients</string>
    <string name="save">Save</string>
    <string name="category">Category:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="by_name_z_a">By name Z-A</string>
    <string name="by_name_a_z">By name A-Z</string>
    <string name="sorting_default">Default</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="exit">Exit</string>
    <string name="by_category">By category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scroll_up">Scroll Up</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>