<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_sharp_search_24"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"/>
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="ifRoom"
        android:title="@string/sort" >
        <menu>
            <item
                android:id="@+id/sorting_default"
                android:title="@string/sorting_default"/>
            <item
                android:id="@+id/sorting_by_name"
                android:title="@string/by_name_a_z"/>
            <item
                android:id="@+id/sorting_by_category"
                android:title="@string/by_category"/>
        </menu>
    </item>
    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_sharp_exit_to_app_24"
        app:showAsAction="ifRoom"
        android:title="@string/exit"/>
</menu>