<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeCreateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title"
                style="@style/MarginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="text" />

            <TextView
                style="@style/MarginStyle"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"/>

            <Spinner
                android:id="@+id/category"
                style="@style/MarginStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:popupBackground="?attr/itemBackgroundColor"/>

            <EditText
                android:id="@+id/ingredients"
                style="@style/MarginStyle"
                android:minLines="4"
                android:gravity="top|left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingredients"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/steps"
                style="@style/MarginStyle"
                android:minLines="4"
                android:gravity="top|left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/steps"
                android:inputType="textMultiLine" />

            <TimePicker
                android:id="@+id/time_to_cook"
                style="@style/MarginStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <ImageView
                android:id="@+id/image"
                style="@style/MarginStyle"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_no_image"
                android:onClick="chooseImage"
                android:scaleType="centerCrop"/>
            <Button
                android:id="@+id/confirm_button"
                style="@style/MarginStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:onClick="saveRecipe"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>