<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_business">

    <fragment
        android:id="@+id/nav_business"
        android:name="by.bstu.vs.stpms.daytracker.ui.business.BusinessFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_business" >
        <action
            android:id="@+id/action_nav_business_to_businessSaveFragment"
            app:destination="@id/nav_business_save"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="by.bstu.vs.stpms.daytracker.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="by.bstu.vs.stpms.daytracker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_business_save"
        android:name="by.bstu.vs.stpms.daytracker.ui.business.BusinessSaveFragment"
        android:label="@string/business"
        tools:layout="@layout/fragment_business_save" >
        <argument
            android:name="Business"
            app:argType="by.bstu.vs.stpms.daytracker.model.entity.Business" />
    </fragment>
</navigation>